# https---github.com-gavint1250-sketch-Rsid-Reader-For-now-

./: .gitignore  Main.py  README.md  Scraper.py  pyproject.toml  requirements.txt  requirements_web.txt  start_web.bat  start_web.sh  web_app.py
.github/workflows/: publish.yml
gui/: main_window.py
modules/: dependency_checker.py  file_analyzer.py  metadata_scraper.py  report_generator.py  requirements.txt  rsid_scraper.py
modules/content/: __init__.py  ai_vocabulary_checker.py  analyzer.py  citation_utils.py  comment_extractor.py  formatting_checker.py  perplexity_checker.py  readability_checker.py  stats_checker.py  track_changes_checker.py
modules/metadata/: __init__.py  app_checker.py  author_checker.py  gdocs_checker.py  keyword_checker.py  revision_checker.py  scrape_detector.py  scraper.py  timestamp_checker.py
modules/pdf/: __init__.py  analyzer.py  content_checker.py  metadata_checker.py  paragraph_adapter.py
web/: analysis_worker.py  app.py  session_store.py
web/templates/: index.html
